--- a/css/custom.css
+++ b/css/custom.css
@@ -42,7 +42,7 @@ header.active{
 
 header.hover{
   width:100%;
-  height:350px;
+  height:160px;
   background: #fff;
 }
 
@@ -92,7 +92,7 @@ header .main-menu{
 
 header .main-menu>li{
   width:100%;
-  position:relative
+  position:relative;
 }
 
 header .main-menu>li>a{
@@ -124,16 +124,25 @@ header .main-menu li .sub{
 
 header .main-menu li .sub .sub-menu{
   position:absolute;
-  width:100%;
   height:100%;
   top:0;
   left:0;
+  display:flex;
+  gap:20px;
+}
+header .main-menu li .sub .sub-menu li{
+  color:#475665;
+  width:110px;
+  box-sizing: border-box;
 }
 
 header .main-menu li .sub .sub-menu li a{
-  line-height:30px;
+  line-height:50px;
 }
-
+header .main-menu li .sub .sub-menu li:hover a{
+  color:#000;
+  font-weight: 700;
+}
 /* main */
 .main{
   width:100%;
@@ -373,7 +382,7 @@ header .main-menu li .sub .sub-menu li a{
 
 .famous-painting .gallery-group .box1{
   position:absolute;
-  top:0px;
+  top:-100px;
 }
 .famous-painting .gallery-group .box2{
   position:absolute;
@@ -390,7 +399,7 @@ header .main-menu li .sub .sub-menu li a{
 }
 .famous-painting .gallery-group .box4{
   position:absolute;
-  top:-150px;
+  top:150px;
   right:200px;
   img{
     width:150px;
@@ -398,15 +407,15 @@ header .main-menu li .sub .sub-menu li a{
 }
 .famous-painting .gallery-group .box5{
   position:absolute;
-  top:800px;
+  top:00px;
   left:100px;
   img{
-    width:500px;
+    width:300px;
   }
 }
 .famous-painting .gallery-group .box6{
   position:absolute;
-  top:100px;
+  top:-100px;
   left:400px;
 }
 .famous-painting .gallery-group .box7{
@@ -430,11 +439,11 @@ header .main-menu li .sub .sub-menu li a{
 .famous-painting .gallery-group .box10{
   position:absolute;
   top:1300px;
-  left:30px;
+  left:150px;
 }
 .famous-painting .gallery-group .box11{
   position:absolute;
-  bottom:100px;
+  bottom:1000px;
   left:530px;
   img{
     width:500px;
@@ -442,7 +451,7 @@ header .main-menu li .sub .sub-menu li a{
 }
 .famous-painting .gallery-group .box12{
   position:absolute;
-  bottom:350px;
+  bottom:850px;
   left:230px;
   img{
     width:200px;
